--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "frontend-project",
+  "name": "react js project",
   "version": "1.0.0",
-  "description": "The Frontend take home project for DoorDash",
+  "description": "examen react",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
@@ -15,7 +15,7 @@
   "engines": {
     "node": ">=7.0.0"
   },
-  "author": "Amit Ranan",
+  "author": "ratah",
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.23.1",
@@ -44,7 +44,7 @@
     "standard": "^9.0.1",
     "style-loader": "^0.13.2"
   },
-  "repository": "https://github.com/amituuush/ChatApp.git",
+  "repository": "https://github.com/tahiryAndrian/reactjsChat.git",
   "dependencies": {
     "axios": "^0.15.3",
     "body-parser": "^1.17.1",
