--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react js project",
+  "name": "projectChat",
   "version": "1.0.0",
   "description": "examen react",
   "main": "server.js",
